<resources>
    <string name="app_name">Poele</string>
    <string name="sign_in">Sign In</string>
    <string name="log_in">Log In</string>
    <string name="guest_entry">Continue as a guest.</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="choose_chef">Choose Chef</string>
    <string name="category">Category</string>
    <string name="choose_home">Choose Home</string>
    <string name="search_text">Search recipe, ingredient…</string>
    <string name="menu_title">Menu</string>
    <string name="menu_content">Menu Contents</string>
    <string name="shoplist">Shoplist</string>
    <string name="notification">Notification</string>
    <string name="search_ingredient">Search ingredient…</string>
    <string name="filter">Filter</string>
    <string name="product_name">Product Name</string>
    <string name="amount">Amount</string>
    <string name="state">State</string>
    <string name="supply_date">%d.%d.%d</string>
    <string name="home">Home</string>
    <string name="fridge">Fridge</string>
    <string name="add">Add</string>
    <string name="macro">Macro</string>
    <string name="profile">Profile</string>
    <string name="surprise_me">Surprise Me</string>
    <string name="create">Create</string>
    <string name="add_recipe">Add recipe</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="edit_recipe">Edit recipe</string>
    <string name="add_to_shoplist">Add to shoplist</string>
    <string name="edit_ingredient">Edit ingredient</string>
    <string name="enter_a_meal">Enter a meal</string>
    <string name="today">Today</string>
    <string name="g_150">150g</string>
    <string name="protein">Protein</string>
    <string name="carbohydrate">Carbohydrate</string>
    <string name="fat">Fat</string>
    <string name="fiber">Fiber</string>
    <string name="calorie">Calorie</string>
    <string name="goal_0_100">0/100</string>
    <string name="macros">Macros</string>
    <string name="carb">Carb</string>
    <string name="goal">Goal</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="bookmark">Bookmark</string>
    <string name="log_out">Log Out</string>
    <string name="live_support">Live Support</string>
    <string name="sort">Sort</string>
    <string name="recipes">Recipes</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="time">Time</string>
    <string name="people">People</string>
    <string name="weight">Weight</string>
    <string name="chef_name">Chef Name</string>
    <string name="recipe_description">Pizza ipsum dolor meat lovers buffalo. Chicken steak Bianca pan parmesan bbq steak.</string>
    <string name="info">Info</string>
    <string name="ingredient">Ingredient</string>
    <string name="how_to_make">How to Make</string>
    <string name="direction">Direction</string>
    <string name="serve_count">Serves: %d</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam at sapien arcu. Nam sit amet lorem felis. Fusce sit amet suscipit purus. Orci.</string>
    <string name="ingredient_amount">%.0f %s</string>
    <string name="supply_amount">%.0f %s</string>
    <string name="step_counter">Step %d</string>
    <string name="recipe_time">%d min</string>
    <string name="suggest_from_recipes">Suggest from recipes</string>
    <string name="ask_chatgpt">Ask ChatGPT</string>
    <string name="home_address">Home Address…</string>
    <string name="home_title">%s\'s %s</string>
    <string name="search_results">Search Results</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="popular_searches">Popular Searches</string>
    <string name="smart_sorting_default">Smart Sorting (Default)</string>
    <string name="a_to_z">A to Z</string>
    <string name="z_to_a">Z to A</string>
    <string name="weight_high_to_low">Weight: High to Low</string>
    <string name="weight_low_to_high">Weight: Low to High</string>
    <string name="time_high_to_low">Time: High to Low</string>
    <string name="time_low_to_high">Time: Low to High</string>
    <string name="ingredient_filter">Ingredient Filter</string>
    <string name="olive_oil">Olive Oil</string>
    <string name="butter">Butter</string>
    <string name="cream">Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="mushroom">Mushroom</string>
    <string name="potato">Potato</string>
    <string name="egg">Egg</string>
    <string name="pasta">Pasta</string>
    <string name="rice">Rice</string>
    <string name="fish">Fish</string>
    <string name="meat">Meat</string>
    <string name="chicken">Chicken</string>
    <string name="clear_selections">Clear Selections</string>
    <string name="list_selections">List Selections</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="shop_list">Shop List</string>
    <string name="recipe_list">Recipe List</string>
    <string name="ingredient_list">Ingredient List</string>
    <string name="prep_time">Prep Time: %d min</string>
    <string name="servings">Servings: %d</string>
    <string name="create_shop_list">Create Shop List</string>
    <string name="lasagne">Lasagne</string>
    <string name="total_amount">Total Amount: 7</string>
    <string name="required_amount_500_g">Required Amount: 2</string>
    <string name="enter_daily_menu">Enter Daily Menu</string>
    <string name="add_to_shop_list">Add to Shop List</string>
    <string name="choose_image">Choose Image</string>
    <string name="basic_infos">Basic Infos</string>
    <string name="title">Title</string>
    <string name="prep_time_only">Prep Time</string>
    <string name="servings_only">Servings</string>
    <string name="level">Level</string>
    <string name="d_ingredient">%d. Ingredient</string>
    <string name="d_ingredient_amount">%d. Ingredient amount</string>
    <string name="add_new_ingredient">Add new ingredient</string>
    <string name="equipments">Equipments</string>
    <string name="d_equipment">%d. Equipment</string>
    <string name="add_new_equipment">Add new equipment</string>
    <string name="meal_entry">Meal Entry</string>
    <string name="add_from_recipes">Add from recipes</string>
    <string name="add_from_supplies">Add from supplies</string>
    <string name="add_custom_meal">Add custom meal</string>
    <string name="set_challenge">Set Challenge</string>
    <string name="set_macro_values">Set Macro Values</string>
    <string name="add_recipe_capital">Add Recipe</string>
    <string name="edit_recipe_capital">Edit Recipe</string>
    <string name="select_recipe">Select Recipe</string>
    <string name="cancel">Cancel</string>
    <string name="add_supply_capital">Add Supply</string>
    <string name="date">Date</string>
    <string name="unit">Unit</string>
    <string name="state_new">State (New)</string>
    <string name="select_supply">Select Supply</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="appetizer">Appetizer</string>
    <string name="soup">Soup</string>
    <string name="dessert">Dessert</string>
    <string name="delete_dialog_title">Delete Item</string>
    <string name="delete_dialog_message">Are you sure to delete this item?</string>
    <string name="delete_dialog_neutral_button">Cancel</string>
    <string name="delete_dialog_negative_button">Decline</string>
    <string name="delete_dialog_positive_button">Accept</string>
    <string name="more_options">More Options</string>
    <string name="find_recipe_contains_this_ingredient">Find recipe contains this ingredient</string>
    <string name="edit_supply">Edit supply</string>
    <string name="add_supply">Add supply</string>
    <string name="add_to_macro">Add to macro</string>
    <string name="g">g</string>
    <string name="ml">ml</string>
    <string name="piece">piece</string>
    <string name="date_picker_title">Select Date</string>
    <string name="favorites">Favorites</string>
    <string name="logout_dialog_title">Log Out</string>
    <string name="logout_dialog_message">Are you sure to log out?</string>
    <string name="log_out_dialog_neutral_button">Cancel</string>
    <string name="log_out_dialog_negative_button">Decline</string>
    <string name="log_out_dialog_positive_button">Accept</string>
    <string name="address_detail">%s Dist., %s Nbhd., %s St.</string>
    <string name="unused">Unused</string>
    <string name="used">Used</string>
    <string name="edit_user_info">Edit UserEntity Info</string>
    <string name="edit_address">Edit Address</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone_number">Phone Number</string>
    <string name="save_changes">Save changes</string>
    <string name="city">City</string>
    <string name="district">District</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="street">Street</string>
    <string name="building_name">Building Name</string>
    <string name="building_no">Building No.</string>
    <string name="door_no">Door No.</string>
    <string name="postal_code">Postal Code</string>
    <string name="floor_no">Floor No.</string>
    <string name="shopping_list">Shopping List</string>
    <string name="product_list">Product List</string>
    <string name="shoplist_dialog_title">Empty your shopping list</string>
    <string name="shoplist_dialog_message">Are you sure to empty your shopping list?</string>
    <string name="shoplist_dialog_negative_button">Decline</string>
    <string name="shoplist_dialog_positive_button">Accept</string>
    <string name="sign_up">Sign Up</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="basic_info">Basic Info</string>
    <string name="required_amount">Required Amount:   </string>
    <string name="empty_recipe_list">There are no recipes in the shopping list.</string>
    <string name="empty_supply_list">There are no supplies in the shopping list.</string>

</resources>
