<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/round_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/fridge"
        android:enabled="true"
        android:icon="@drawable/round_kitchen_24"
        android:title="@string/fridge" />

    <item
        android:id="@+id/add"
        android:enabled="true"
        android:icon="@drawable/round_add_24"
        android:title="@string/add" />

    <item
        android:id="@+id/macro"
        android:enabled="true"
        android:icon="@drawable/round_show_chart_24"
        android:title="@string/macro" />

    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/round_person_24"
        android:title="@string/profile" />


</menu>
