<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.umut.poele.ui.choose.ChooseViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_bottom_sheet">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/modal_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/vertical_padding"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_drag_handle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/vertical_margin"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="0dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0"
                app:strokeWidth="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
                        android:id="@+id/drag_handle"
                        style="@style/Widget.Umut.DragHandle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_bottom_sheet_title"
                        style="@style/TextAppearance.Material3.ActionBar.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/vertical_margin"
                        android:text="@string/filter"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/drag_handle"
                        app:layout_constraintVertical_bias="0" />

                    <ImageView
                        android:id="@+id/image_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/horizontal_margin"
                        android:importantForAccessibility="no"
                        android:onClick="@{()->viewModel.onBackClicked()}"
                        android:src="@drawable/round_close_24"
                        app:layout_constraintBottom_toBottomOf="@id/text_bottom_sheet_title"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1"
                        app:layout_constraintStart_toEndOf="@id/text_bottom_sheet_title"
                        app:layout_constraintTop_toTopOf="@id/text_bottom_sheet_title" />

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:dividerColor="@color/md_theme_light_outline"
                        app:dividerThickness="1dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/text_sort_title"
                style="@style/TextAppearance.Material3.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin"
                android:layout_marginVertical="@dimen/vertical_margin"
                android:text="@string/sort"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_drag_handle"
                app:layout_constraintVertical_bias="0" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_sort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin"
                android:orientation="horizontal"
                app:checkedChip="@id/chip_default"
                app:chipSpacingVertical="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_sort_title"
                app:layout_constraintVertical_bias="0"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_default"
                    style="@style/Widget.Material3.Chip.Assist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/smart_sorting_default" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_alphabetical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/a_to_z" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_reverse_alphabetical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/z_to_a" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/weight_high_to_low" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_reverse_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/weight_low_to_high" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/time_high_to_low" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_reverse_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/time_low_to_high" />

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/text_ingredient_title"
                style="@style/TextAppearance.Material3.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin"
                android:layout_marginVertical="@dimen/vertical_margin"
                android:text="@string/ingredient_filter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chip_group_sort"
                app:layout_constraintVertical_bias="0" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_ingredient_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin"
                android:layout_marginVertical="@dimen/vertical_margin"
                android:orientation="horizontal"
                app:chipSpacingVertical="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_ingredient_title"
                app:layout_constraintVertical_bias="0"
                app:selectionRequired="false"
                app:singleSelection="false">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_chicken"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/chicken" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_meat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/meat" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_fish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/fish" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_rice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/rice" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_pasta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/pasta" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_egg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/egg" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_potato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/potato" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_mushroom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/mushroom" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_chocolate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/chocolate" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_cream"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/cream" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_butter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/butter" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_olive_oil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/olive_oil" />

            </com.google.android.material.chip.ChipGroup>

            <Button
                android:id="@+id/button_clear"
                style="@style/Widget.Material3.Button.OutlinedButton"
                app:shapeAppearance="@style/ShapeAppearanceOverlay.Material3.Chip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/clear_filters"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chip_group_ingredient_filter"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@id/button_list_selection"/>

            <Button
                android:id="@+id/button_list_selection"
                style="@style/Widget.Material3.Button"
                app:shapeAppearance="@style/ShapeAppearanceOverlay.Material3.Chip"
                android:layout_width="0dp"
                android:layout_marginHorizontal="@dimen/horizontal_margin"
                android:layout_marginVertical="@dimen/vertical_margin"
                android:onClick="@{()->viewModel.onListSelectionsClicked()}"
                android:layout_height="wrap_content"
                android:text="@string/list_selections"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/button_clear"
                app:layout_constraintTop_toTopOf="@id/button_clear"
                app:layout_constraintBottom_toBottomOf="@id/button_clear"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
